<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserInfo">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/infoTime"
                android:layout_marginTop="24dp"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/tv_info_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:textAlignment="center"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="50sp"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp" />

            <TextView
                android:id="@+id/tv_info_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/infoUser"
                android:textAlignment="center"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="20dp"
                app:cardCornerRadius="5dp"
                app:cardElevation="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="10dp"
                    android:layout_marginBottom="30dp">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/nautaAccount"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        app:fontFamily="@font/optima_lt_std_medium" />

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="#f1f1f1">

                    </FrameLayout>

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp"
                        android:text="@string/blockDate"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:fontFamily="@font/optima_lt_std_medium" />

                    <TextView
                        android:id="@+id/tv_block_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp"
                        app:fontFamily="@font/optima_lt_std_medium" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp"
                        android:text="@string/DeleteDate"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:fontFamily="@font/optima_lt_std_medium" />

                    <TextView
                        android:id="@+id/tv_delete_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp"
                        app:fontFamily="@font/optima_lt_std_medium" />

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp"
                        android:text="@string/accountType"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:fontFamily="@font/optima_lt_std_medium" />

                    <TextView
                        android:id="@+id/tv_account_type"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp"
                        app:fontFamily="@font/optima_lt_std_medium" />

                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp"
                        android:text="@string/serviceType"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:fontFamily="@font/optima_lt_std_medium" />

                    <TextView
                        android:id="@+id/tv_service_type"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp"
                        app:fontFamily="@font/optima_lt_std_medium" />

                    <TextView
                        android:id="@+id/textView14"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp"
                        android:text="@string/accountCredit"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:fontFamily="@font/optima_lt_std_medium" />

                    <TextView
                        android:id="@+id/tv_account_credit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp"
                        app:fontFamily="@font/optima_lt_std_medium" />

                    <TextView
                        android:id="@+id/textView16"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp"
                        android:text="@string/mailAccount"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:fontFamily="@font/optima_lt_std_medium" />

                    <TextView
                        android:id="@+id/tv_mail_account"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp"
                        app:fontFamily="@font/optima_lt_std_medium" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="20dp"
                app:cardCornerRadius="5dp"
                app:cardElevation="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/textView18"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/recharge"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        app:fontFamily="@font/optima_lt_std_medium" />

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="#f1f1f1">

                    </FrameLayout>

                    <TextView
                        android:id="@+id/textView19"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/infoRecharge"
                        app:fontFamily="@font/optima_lt_std_medium" />

                    <EditText
                        android:id="@+id/et_recharge_code"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="number" />

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:background="#f1f1f1">

                    </FrameLayout>

                    <Button
                        android:id="@+id/bt_recharge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_margin="10dp"
                        android:background="@color/colorPrimary"
                        android:onClick="recharge"
                        android:paddingLeft="25dp"
                        android:paddingRight="25dp"
                        android:text="@string/recharge"
                        android:textColor="@color/cardview_light_background" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="20dp"
                app:cardCornerRadius="5dp"
                app:cardElevation="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/textView20"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/transfer"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        app:fontFamily="@font/optima_lt_std_medium" />

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="#f1f1f1">

                    </FrameLayout>

                    <TextView
                        android:id="@+id/textView23"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/infoTransfer"
                        android:fontFamily="@font/optima_lt_std_medium" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/et_mont"
                            android:layout_width="130dp"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="0.00"
                            android:inputType="numberDecimal" />

                        <TextView
                            android:id="@+id/textView22"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/cuc"
                            android:textSize="18sp" />

                    </LinearLayout>

                    <AutoCompleteTextView
                        android:id="@+id/actv_accountToTransfer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Destinatario"
                        android:completionThreshold="1" />

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="#f1f1f1">

                    </FrameLayout>

                    <Button
                        android:id="@+id/bt_transfer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_margin="10dp"
                        android:background="@color/colorPrimary"
                        android:onClick="transfer"
                        android:paddingLeft="25dp"
                        android:paddingRight="25dp"
                        android:text="@string/transfer"
                        android:textColor="@color/cardview_light_background" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>
</LinearLayout>