<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="20dp"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/info_login"
                        android:textAlignment="center"
                        android:textSize="24sp"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/optima_lt_std_medium"
                        android:textStyle="italic" />

                    <AutoCompleteTextView
                        android:id="@+id/actv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:completionThreshold="1"
                        android:hint="@string/user_login"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:inputType="textAutoComplete" />

                    <EditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password_login"
                        android:inputType="textPassword"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp" />

                    <EditText
                        android:id="@+id/et_captchaCode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/captcha_code_login"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:inputType="text" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp">

                        <ImageView
                            android:id="@+id/iv_captcha"
                            android:layout_width="match_parent"
                            android:layout_height="150dp"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentTop="true"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentBottom="true"
                            android:layout_marginStart="0dp"
                            android:layout_marginLeft="0dp"
                            android:layout_marginTop="0dp"
                            android:layout_marginEnd="0dp"
                            android:layout_marginRight="0dp"
                            android:layout_marginBottom="0dp" />

                        <Button
                            android:id="@+id/bt_reload"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_alignTop="@+id/iv_captcha"
                            android:layout_alignEnd="@+id/iv_captcha"
                            android:layout_alignRight="@+id/iv_captcha"
                            android:layout_marginTop="15dp"
                            android:layout_marginEnd="15dp"
                            android:layout_marginRight="15dp"
                            android:background="@android:drawable/ic_popup_sync"
                            android:onClick="reLoadCaptcha" />

                    </RelativeLayout>

                    <Button
                        android:id="@+id/bt_login"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_acept"
                        android:paddingLeft="50dp"
                        android:paddingRight="50dp"
                        android:layout_gravity="center"
                        android:textColor="@color/cardview_light_background"
                        android:background="@color/colorPrimary"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="20dp"
                        android:onClick="login" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>


</LinearLayout>